--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background: whitesmoke
+    background:  whitesmoke;
   }
   h1{
     color:black;
@@ -13,22 +13,22 @@ body {
   
   
   p {
-    color:white
-   margin-left: 150px;
+    color:black;
+   margin-left: 0px;
    padding: 5px;
   }
   
   img {
     width: 250px;
     float: left;
-    margin: 10px;
+    margin: 15px;
     border-radius: 35px;
   }
   
   .objetivos{
     border: solid 5px;
     border-color: black;
-    border-radius: 15px;
+    border-radius: 10px;
    color:yellow;
     font-family:serif;
    background-color: rgb(128, 128, 128);
@@ -37,7 +37,7 @@ body {
     border: solid 5px;
     border-color:black;
     border-radius: 10px;
-    color: purple;
+    color: black;
     font-family:serif;
    background-color:aquamarine;
   }
@@ -46,7 +46,7 @@ body {
     border: solid 5px;
     border-color:black;
     border-radius: 10px;
-    color: purple;
+    color: black;
     font-family:serif;
    background-color: pink;
   }
@@ -54,8 +54,8 @@ body {
     border: solid 5px;
     border-color:black;
     border-radius: 10px;
-    color: WHITE;
+    color: black;
     font-family:serif;
-   background-color: BROWN;
+   background-color:paleturquoise;
   }
   
